[package]
name = "BlinkSync"
version = "0.1.2"
edition = "2021"

[dependencies]
isahc = { version = "1.7.2", features = [ "json" ] }
uuid = { version = "1.8.0", features = ["v4"] }
clap = "4.5.4"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
urlencoding = "2.1.3"
chrono = "0.4.38"
toml = "0.8.12"
env_logger = "0.11.3"
